--spacing issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
 
 #root {
     background-color: black;
+    overflow: hidden;
 }
 
 .delay1{
